--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Food Order app using ReactJs" />
-  <title>Food Order</title>
+  <title>React Bite</title>
 </head>
 
 <body>
